--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "nuxt-simple-sitemap": "^4.2.0",
     "typescript": "^5.3.3",
     "vue-content-loader": "^2.0.1"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.2.2"
   }
 }
