--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-content-loader": "^2.0.1"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.2.2"
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10"
   }
 }
