--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/auto-animate": "^0.8.0",
     "@nuxt/content": "^2.12.0",
     "@nuxt/image": "^1.3.0",
+    "@nuxthq/studio": "^1.0.13",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/robots": "^3.0.0",
