--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.42.0",
+    "@dargmuesli/nuxt-cookie-control": "^8.4.8",
     "@formkit/auto-animate": "^0.8.0",
     "@nuxt/content": "^2.12.0",
     "@nuxt/image": "^1.3.0",
